--- a/src/styles/Burger.scss
+++ b/src/styles/Burger.scss
@@ -103,13 +103,14 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        line-height: 1rem;
         }
 
-        #menu li
+        #menu a
         {
-        padding: 10vw 20px;
-        font-size: 2rem;
-        font-family: 'Roboto';
+        padding: 7vw;
+        font-size: 3rem;
+        font-family: 'Heaters';
         }
         #menuToggle input:checked ~ ul
         {
